--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,15 +27,17 @@
   },
   "homepage": "https://github.com/guerrato/joseph#readme",
   "dependencies": {
+    "@prisma/client": "^5.16.0",
     "argon2": "^0.40.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "jest": "^29.7.0",
-    "prisma": "^5.15.1",
+    "prisma": "^5.16.0",
     "typescript": "^5.5.2"
   },
   "prisma": {
