--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/guerrato/joseph#readme",
   "dependencies": {
     "@prisma/client": "^5.16.0",
+    "@sendgrid/mail": "^8.1.3",
     "argon2": "^0.40.3",
     "jsonwebtoken": "^9.0.2",
     "tsyringe": "^4.8.0"
