--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "@prisma/client": "^5.16.0",
     "@sendgrid/mail": "^8.1.3",
+    "@sinclair/typebox": "^0.32.34",
     "argon2": "^0.40.3",
+    "fastify": "^4.28.1",
     "jsonwebtoken": "^9.0.2",
     "tsyringe": "^4.8.0"
   },
