--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,6 +31,7 @@
     "@sendgrid/mail": "^8.1.3",
     "@sinclair/typebox": "^0.32.34",
     "argon2": "^0.40.3",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "jsonwebtoken": "^9.0.2",
     "tsyringe": "^4.8.0"
@@ -44,6 +45,6 @@
     "typescript": "^5.5.2"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "npx tsx prisma/seed.ts"
   }
 }
