--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,8 +6,11 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./src/index.ts",
-    "test": "jest"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md}' --config ./.prettierrc",
+    "dev": "npx tsx --watch --trace-warnings ./src/server",
+    "build": "rm -rf ./dist && npm run format && tsc && ./build.sh",
+    "start": "node ./dist/www",
+    "test": "jest --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -31,14 +34,24 @@
     "@sendgrid/mail": "^8.1.3",
     "@sinclair/typebox": "^0.32.34",
     "argon2": "^0.40.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fastify": "^4.28.1",
+    "fastify-plugin": "^4.5.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.9",
     "jest": "^29.7.0",
     "prisma": "^5.16.0",
