--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -10,7 +10,7 @@
     "outDir": "./dist",
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
