Implement the authentication

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -21,7 +21,8 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "skipLibCheck": true,
-    "declaration": true
+    "declaration": true,
+    "typeRoots": ["./node_modules/@types", "./types"],
   },
   "exclude": ["node_modules", "tsconfig.json", "dist"],
   "include": ["./src/**/*.ts", "./src/**/*", "./src/**/*.json", "./tests/**/*.ts", "./prisma/**/*.ts"]
